Swagger spec --> client SDK codegen
