# handlers/get.go
@@ -13,6 +13,7 @@ import (
 // ListAll handles GET requests and returns all current products
 func (p *Products) ListAll(w http.ResponseWriter, r *http.Request) {
 	p.l.Println("[DEBUG] get all records")
+	w.Header().Add("Content-Type", "application/json")
 
 	prods := data.GetProducts()
 
@@ -22,7 +23,7 @@ func (p *Products) ListAll(w http.ResponseWriter, r *http.Request) {
 	}
 }
 
-// swagger:route GET /products/{id} products listSingle
+// swagger:route GET /products/{id} products listSingleProduct
 // Return a list of products from the database
 // responses:
 //	200: productResponse
@@ -30,6 +31,8 @@ func (p *Products) ListAll(w http.ResponseWriter, r *http.Request) {
 
 // ListSingle handles GET requests
 func (p *Products) ListSingle(w http.ResponseWriter, r *http.Request) {
+	w.Header().Add("Content-Type", "application/json")
+
 	id := getProductID(r)
 
 	p.l.Println("[DEBUG] get record id", id)
