# swagger.yaml
@@ -3,15 +3,16 @@ consumes:
     - application/json
 definitions:
     GenericError:
-        description: GenericError is a generic error message returned by a server
+        description: GenericError GenericError GenericError GenericError is a generic error message returned by a server
         properties:
             message:
+                description: message
                 type: string
                 x-go-name: Message
         type: object
-        x-go-package: gomicro/handlers
+        x-go-package: gomicro/sdk/models
     Product:
-        description: Product defines the structure for an API product
+        description: Product Product Product Product defines the structure for an API product
         properties:
             description:
                 description: the description for this poduct
@@ -45,17 +46,18 @@ definitions:
             - price
             - sku
         type: object
-        x-go-package: gomicro/data
+        x-go-package: gomicro/sdk/models
     ValidationError:
-        description: ValidationError is a collection of validation error messages
+        description: ValidationError ValidationError ValidationError ValidationError is a collection of validation error messages
         properties:
             messages:
+                description: messages
                 items:
                     type: string
                 type: array
                 x-go-name: Messages
         type: object
-        x-go-package: gomicro/handlers
+        x-go-package: gomicro/sdk/models
 info:
     description: Documentation for gomicro Product API
     title: of gomicro Product API
@@ -103,13 +105,6 @@ paths:
                   required: true
                   schema:
                     $ref: '#/definitions/Product'
-                - description: The id of the product for which the operation relates
-                  format: int64
-                  in: path
-                  name: id
-                  required: true
-                  type: integer
-                  x-go-name: ID
             responses:
                 "201":
                     $ref: '#/responses/noContentResponse'
@@ -123,6 +118,14 @@ paths:
         delete:
             description: Update a products details
             operationId: deleteProduct
+            parameters:
+                - description: The id of the product for which the operation relates
+                  format: int64
+                  in: path
+                  name: id
+                  required: true
+                  type: integer
+                  x-go-name: ID
             responses:
                 "201":
                     $ref: '#/responses/noContentResponse'
@@ -134,7 +137,15 @@ paths:
                 - products
         get:
             description: Return a list of products from the database
-            operationId: listSingle
+            operationId: listSingleProduct
+            parameters:
+                - description: The id of the product for which the operation relates
+                  format: int64
+                  in: path
+                  name: id
+                  required: true
+                  type: integer
+                  x-go-name: ID
             responses:
                 "200":
                     $ref: '#/responses/productResponse'
